add tuning script